# bcc-sl

./: CHANGELOG.md  CONTRIBUTING.md  README.md  bors.toml  default.nix  lib.nix  release.nix  shell.nix  stack.yaml
acid-state-exts/: README.md
auxx/: Makefile  README.md  bcc-sl-auxx.cabal
auxx/src/: AuxxOptions.hs  Repl.hs
auxx/src/Lang/: Lexer.hs
binary/: README.md  bcc-sl-binary.cabal
binary/test/: bcc-sl-binary-test.cabal
chain/: Makefile  README.md  bcc-sl-chain.cabal  shell.nix
chain/test/: bcc-sl-chain-test.cabal
client/: Makefile  README.md  bcc-sl-client.cabal
cluster/: README.md  bcc-sl-cluster.cabal
cluster/app/demo/: Main.hs
cluster/app/prepare-environment/: Main.hs
cluster/src/Bcc/: Cluster.hs
cluster/src/Bcc/Cluster/: Environment.hs  Util.hs
cluster/test/: Main.hs
cluster/test/Bcc/Cluster/Environment/: Arbitrary.hs  Spec.hs
cluster/test/Bcc/Cluster/Util/: Arbitrary.hs  Spec.hs
core/: Makefile  README.md  bcc-sl-core.cabal
core/test/: bcc-sl-core-test.cabal
core/test/Test/Pos/Core/: Bi.hs  ExampleHelpers.hs  Gen.hs
crypto/: README.md  bcc-sl-crypto.cabal  shell.nix
crypto/Pos/Crypto/: HD.hs  Limits.hs  Orphans.hs  SafeCopy.hs  SecretSharing.hs
crypto/test/: bcc-sl-crypto-test.cabal
crypto/test/Test/Pos/Crypto/: Arbitrary.hs  Bi.hs
db/: Makefile  README.md  bcc-sl-db.cabal  shell.nix
db/test/: bcc-sl-db-test.cabal
db/test/Test/Pos/DB/Update/Poll/Logic/: Version.hs
explorer/: CHANGELOG.md  Makefile  README.md  bcc-sl-explorer.cabal  start-dev.sh
explorer/bench/: Main.hs
explorer/frontend/: ARCHITECTURE.md  README.md  bower.json  default.nix  package.json  shell.nix
explorer/frontend/scripts/: build.sh
explorer/frontend/src/: global.css  index.css  index.tpl.html
explorer/python-api/: setup.py
explorer/python-api/explorer_python_api/: ExplorerDumper.py
explorer/scripts/: fetch_dependencies.sh  generate_cabal2nix.sh
explorer/scripts/launch/: qa.sh  staging.sh
explorer/src/documentation/: Main.hs
explorer/src/explorer/: ExplorerNodeOptions.hs
explorer/src/mock/: Main.hs
faucet/: bcc-sl-faucet.cabal
faucet/frontend/: default.nix  index.html
faucet/server/: Main.hs
faucet/src/Bcc/: Faucet.hs  WalletClient.hs
faucet/src/Bcc/Faucet/: Endpoints.hs  Init.hs  Metrics.hs  Swagger.hs  Types.hs
faucet/src/Bcc/Faucet/Types/: API.hs  Config.hs  Recaptcha.hs
faucet/test/: Spec.hs
generator/: Makefile  README.md  bcc-sl-generator.cabal
infra/: Makefile  README.md  bcc-sl-infra.cabal  default.nix  shell.nix
infra/test/: bcc-sl-infra-test.cabal
infra/test/Test/Pos/Infra/: Arbitrary.hs
lib/: Makefile  README.md  bcc-sl.cabal  configuration.yaml  default.nix  shell.nix
lib/src/Pos/: Web.hs
log-configs/: klarity.yaml
mnemonic/: README.md  bcc-sl-mnemonic.cabal
mnemonic/generate-mnemonic/: Main.hs
mnemonic/src/Bcc/: Mnemonic.hs
mnemonic/test/: Main.hs
mnemonic/test/Bcc/: MnemonicSpec.hs
networking/: README.md  bcc-sl-networking.cabal
networking/src/: Node.hs
nix/: bcc-sl-config.nix  docker.nix  klarity-bridge.nix  nix-tools.nix  pkgs.nix  regenerate.sh  scripts.nix  sources.json  tbco-binary-cache.nix  tbco-common.nix  tbco-nix-src.json  tests.nix  update-tbco-nix.sh
nix/.stack.nix/: bcc-crypto.nix  bcc-report-server.nix  bcc-sl-auxx.nix  bcc-sl-binary-test.nix  bcc-sl-binary.nix  bcc-sl-chain-test.nix  bcc-sl-chain.nix  bcc-sl-client.nix  bcc-sl-cluster.nix  bcc-sl-core-test.nix  bcc-sl-core.nix  bcc-sl-crypto-test.nix  bcc-sl-crypto.nix  bcc-sl-db-test.nix  bcc-sl-db.nix  bcc-sl-explorer.nix  bcc-sl-faucet.nix  bcc-sl-generator.nix  bcc-sl-infra-test.nix  bcc-sl-infra.nix  bcc-sl-mnemonic.nix  bcc-sl-networking.nix  bcc-sl-node-ipc.nix  bcc-sl-node.nix  bcc-sl-script-runner.nix  bcc-sl-tools-post-mortem.nix  bcc-sl-tools.nix  bcc-sl-util-test.nix  bcc-sl-util.nix  bcc-sl-utxo.nix  bcc-sl-x509.nix  bcc-sl.nix  bcc-wallet.nix  default.nix  engine-io-wai.nix  engine-io.nix  log-warper.nix  rocksdb-haskell-ng.nix  serokell-util.nix  socket-io.nix  (+2 more)
nix/acceptance/: default.nix
nix/tests/: swaggerSchemaValidation.nix  yamlValidation.nix
nixos-tests/: wallet-api.nix
node/: Makefile  README.md  bcc-sl-node.cabal
node-ipc/: bcc-sl-node-ipc.cabal  server.js  shell.nix  wallet-topology.yaml
node/app/: Main.hs
pkgs/: default.nix  generate.sh  regen.nix
script-runner/: README.md  TestCases.hs  bcc-sl-script-runner.cabal  runtest.nix  shell.nix  stack-gui  stack-test  topology-mainnet.yaml  topology-staging.yaml  topology-testnet.yaml
script-runner/common/: AutomatedTestRunner.hs  NodeControl.hs
scripts/: README.md  check-stack2nix.sh  common-functions.sh  hash-installer.sh  package-dep-graph.sh
scripts/analyze/: logs.hs
scripts/bench/: buildbench.sh
scripts/ci/: update-cli-docs.sh  update-explorer-web-api-docs.sh  update-haddock.sh  update-wallet-web-api-docs.sh
scripts/clean/: all.sh  db.sh
scripts/haskell/: dependencies.hs  git-pre-commit-hook  update-cabal-versions.sh
scripts/launch/: Test.hs  auxx.sh  explorer.sh  klarity-example.sh
scripts/prepare-genesis/: README.md  build-bcc.sh  default.nix  gen-avvm-seeds.sh  gen-delegate-keys.sh  genesis-prep-test.sh  keys-and-certs.sh
scripts/test/: hlint.nix  shellcheck.nix  stylish.nix
tools/: README.md  bcc-sl-tools.cabal
tools/post-mortem/: README.md  bcc-sl-tools-post-mortem.cabal
util/: README.md  bcc-sl-util.cabal  default.nix
util/test/: bcc-sl-util-test.cabal
utxo/: bcc-sl-utxo.cabal
utxo/src/UTxO/: Bootstrap.hs  Context.hs  Crypto.hs  DSL.hs  IntTrans.hs  Translate.hs  Verify.hs
wallet/: .gitignore  .stylish-haskell.yaml  .travis.yml  Makefile  README.md  bcc-sl.yaml  bcc-wallet.cabal  integration.tix  shell.nix  stack.yaml
wallet/generate-swagger-file/: README.md
wallet/topology-examples/: testnet.yaml
x509/: README.md  bcc-sl-x509.cabal  configuration.yaml.example
x509/src/Bcc/X509/: Configuration.hs
x509/test/: Main.hs
x509/test/Test/Bcc/X509/: Configuration.hs
x509/test/Test/Bcc/X509/Configuration/: Arbitrary.hs
yaml-validation/: yaml-validation.cabal
(+273 files in other folders)
