name:                bcc-sl-client
version:             3.2.0
synopsis:            Bcc SL client modules
description:         Bcc SL client modules
license:             Apache-2.0
license-files:
  LICENSE
  NOTICE
author:              Serokell
maintainer:          hi@serokell.io
copyright:           2021 TBCO
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:
                       Pos.Client.Txp
                       Pos.Client.Txp.Addresses
                       Pos.Client.Txp.Balances
                       Pos.Client.Txp.History
                       Pos.Client.Txp.Network
                       Pos.Client.Txp.Util

                       Pos.Client.Update
                       Pos.Client.Update.Network

                       Pos.Client.KeyStorage

  build-depends:       base
                     , bcc-sl
                     , bcc-sl-chain
                     , bcc-sl-core
                     , bcc-sl-crypto
                     , bcc-sl-db
                     , bcc-sl-infra
                     , bcc-sl-util
                     , containers
                     , data-default
                     , formatting
                     , lens
                     , mtl
                     , safe-exceptions
                     , serokell-util
                     , stm
                     , formatting
                     , transformers
                     , universum
                     , unordered-containers
                     , vector
                     , QuickCheck

  default-extensions:  DeriveDataTypeable
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       StandaloneDeriving
                       FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       FunctionalDependencies
                       DefaultSignatures
                       NoImplicitPrelude
                       OverloadedStrings
                       TypeApplications
                       TupleSections
                       ViewPatterns
                       LambdaCase
                       MultiWayIf
                       ConstraintKinds
                       UndecidableInstances
                       BangPatterns
                       TemplateHaskell
                       ScopedTypeVariables
                       MonadFailDesugaring

  hs-source-dirs:      src
  default-language:    Haskell2010

  ghc-options:         -Wall
                       -O2

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

test-suite bcc-client-test
  main-is:             Test.hs
  other-modules:
                       Spec

                       -- Txp
                       Test.Pos.Client.Txp.Mode
                       Test.Pos.Client.Txp.UtilSpec

  type:                exitcode-stdio-1.0

  build-depends:
                       base
                     , bytestring
                     , bcc-sl
                     , bcc-sl-chain
                     , bcc-sl-chain-test
                     , bcc-sl-client
                     , bcc-sl-core
                     , bcc-sl-crypto
                     , bcc-sl-crypto-test
                     , bcc-sl-db
                     , bcc-sl-util
                     , bcc-sl-util-test
                     , containers
                     , formatting
                     , hspec
                     , QuickCheck
                     , universum >= 0.1.11
                     , unordered-containers
  build-tool-depends: hspec-discover:hspec-discover

  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -rtsopts
                       -Wall

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns
                        TemplateHaskell
                        ScopedTypeVariables
                        GADTs
                        MonadFailDesugaring

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp
