name:           bcc-sl-faucet
version:        3.2.0
description:    Bcc SL - faucet
license:        Apache-2.0
license-files:
  LICENSE
  NOTICE
author:         Ben Ford
maintainer:     ben.ford@tweag.io
copyright:      2021 TBCO
build-type:     Simple
cabal-version:  >= 1.10

library
  hs-source-dirs:
      src
  build-depends:
                      base
                    , QuickCheck
                    , aeson
                    , bytestring
                    , bcc-sl-client
                    , bcc-sl-core
                    , bcc-sl-crypto
                    , bcc-sl-util
                    , bcc-sl-mnemonic
                    , bcc-wallet
                    , connection
                    , cryptonite
                    , data-default
                    , directory
                    , ekg-core
                    , ekg-statsd
                    , filepath
                    , generic-arbitrary
                    , http-api-data
                    , http-client
                    , http-client-tls
                    , http-types
                    , lens
                    , log-warper
                    , memory
                    , mmorph
                    , mtl
                    , neat-interpolation
                    , random
                    , safe-exceptions
                    , servant
                    , servant-client-core
                    , servant-server
                    , servant-swagger
                    , servant-swagger-ui
                    , stm
                    , swagger2
                    , tagged
                    , text
                    , time
                    , tls
                    , universum
                    , wai
                    , wai-app-static
                    , wreq
  exposed-modules:
                      Bcc.Faucet
                    , Bcc.Faucet.Endpoints
                    , Bcc.Faucet.Swagger
                    , Bcc.Faucet.Types.Config
                    , Bcc.Faucet.Types.API
                    , Bcc.Faucet.Types.Recaptcha
                    , Bcc.Faucet.Types
                    , Bcc.Faucet.Metrics
                    , Bcc.Faucet.Init
                    , Bcc.WalletClient
  default-language: Haskell2010
  default-extensions:  NoImplicitPrelude
  ghc-options: -Wall

executable bcc-faucet
  main-is: Main.hs
  hs-source-dirs:
      server
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
                     base
                   , aeson
                   , bytestring
                   , bcc-sl-faucet
                   , bcc-sl-infra
                   , bcc-sl-util
                   , ekg
                   , ekg-statsd
                   , lens
                   , log-warper
                   , mtl
                   , optparse-applicative
                   , servant-server
                   , text
                   , universum
                   , warp
  default-language: Haskell2010
  default-extensions:  NoImplicitPrelude

test-suite faucet-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
                     base
                   , QuickCheck
                   , aeson
                   , bytestring
                   , bcc-sl-faucet
                   , hspec
                   , time
                   , universum
  default-language: Haskell2010
  default-extensions:  NoImplicitPrelude
