name:                bcc-sl-script-runner
version:             3.2.0
synopsis:            Bcc SL - Script Runner
description:         Bcc SL - ScriptRunner
license:             Apache-2.0
license-files:
  LICENSE
  NOTICE
author:              TBCO
maintainer:          operations@bcccoin.io
copyright:           2021 TBCO
category:            Currency
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      common
  exposed-modules:      AutomatedTestRunner
                        BrickUI
                        BrickUITypes
                        NodeControl
                        OrphanedLenses
                        PocMode
                        Types
  default-language:    Haskell2010
  build-depends:        base
                      , aeson
                      , brick
                      , bytestring
                      , bcc-sl
                      , bcc-sl-chain
                      , bcc-sl-client
                      , bcc-sl-core
                      , bcc-sl-crypto
                      , bcc-sl-db
                      , bcc-sl-infra
                      , bcc-sl-networking
                      , bcc-sl-util
                      , conduit
                      , constraints
                      , containers
                      , data-default
                      , dns
                      , formatting
                      , lens
                      , lifted-async
                      , mtl
                      , optparse-applicative
                      , process
                      , resourcet
                      , serokell-util
                      , stm
                      , text
                      , time
                      , time-units
                      , turtle
                      , universum
                      , unix
                      , unordered-containers
                      , vector
                      , vty
                      , yaml
  ghc-options:         -Wall -Weverything
                       -Wno-unsafe -Wno-missing-import-lists
                       -O2
  if os(windows)
    buildable: False

executable testcases
  main-is:              TestCases.hs
  other-modules:        BlockParser
  default-language:    Haskell2010
  build-depends:        base
                      , bytestring
                      , bcc-sl
                      , bcc-sl-binary
                      , bcc-sl-chain
                      , bcc-sl-core
                      , bcc-sl-db
                      , bcc-sl-infra
                      , bcc-sl-script-runner
                      , bcc-sl-util
                      , cborg
                      , constraints
                      , data-default
                      , formatting
                      , serokell-util
                      , text
                      , time-units
                      , turtle
                      , universum
  ghc-options:         -threaded -rtsopts
                       -Wall -Weverything
                       -Wno-unsafe -Wno-missing-import-lists
                       -O2
  if os(windows)
    buildable: False
