name:                bcc-sl-db-test
version:             3.2.0
synopsis:            Bcc SL - arbitrary instances for bcc-sl-db
description:         Bcc SL - arbitrary instances for bcc-sl-db
license:             Apache-2.0
license-files:
  LICENSE
  NOTICE
author:              TBCO
maintainer:          TBCO <support@blockchain-company.io>
copyright:           2021 TBCO
category:            Currency
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
                       Test.Pos.DB.Update.Arbitrary
                       Test.Pos.DB.Block.Arbitrary

  other-modules:
                       Test.Pos.DB.Update.Arbitrary.Poll
                       Test.Pos.DB.Update.Arbitrary.MemState

  build-depends:       QuickCheck
                     , base
                     , bcc-sl-binary
                     , bcc-sl-chain
                     , bcc-sl-chain-test
                     , bcc-sl-core-test
                     , bcc-sl-crypto-test
                     , bcc-sl-db
                     , bcc-sl-util-test
                     , generic-arbitrary
                     , universum
                     , unordered-containers

  default-language:    Haskell2010

  ghc-options:         -Wall
                       -fno-warn-orphans
                       -O2
